--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@
 }
 header{
   width: 100%;
-  height:100vh;
+  height:216vw;
   background-image: url('../pic1.jpg');
   background-size: 350%;
   background-position: center 20%;
@@ -39,6 +39,7 @@ header h1{
   font-size: 14vw;
   font-weight: 400;
   margin-bottom: 5px;
+  letter-spacing: 0;
 }
 header h2{
   margin-top: 0;
@@ -48,6 +49,13 @@ header h2{
 .header-bottom-block{
 position: absolute;
 bottom: 0%;
+left: 50%;
+transform: translateX(-50%);
+}
+
+#intro p{
+  font-size: 4.6vw;
+  line-height: 10.2vw;
 }
 .firstIntroBlock{
   background-color: rgba(143, 169, 140, 0.25);
