--- a/src/style.css
+++ b/src/style.css
@@ -1,182 +1,194 @@
 @font-face {
-  font-family: 'cinzel';
-  src: url(../fonts/cinzel_regular.ttf);
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap; 
+	font-family: 'cinzel';
+	src: url(../fonts/cinzel_regular.ttf);
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
 }
 @font-face {
-  font-family: 'anastasia';
-  src: url(../fonts/ofont.ru_Anastasia.ttf);
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap; 
+	font-family: 'anastasia';
+	src: url('../fonts/ofont.ru_Anastasia.woff') format('woff'),
+		url('../fonts/ofont.ru_Anastasia.otf') format('opentype');
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
 }
 
 :root {
-  font-family: cinzel, serif;
-  line-height: 1.5;
-  font-weight: 400;
-  text-align: center;
+	font-family: cinzel, serif;
+	line-height: 1.5;
+	font-weight: 400;
+	text-align: center;
 }
-header{
-  width: 100%;
-  height:216vw;
-  background-image: url('../pic1.jpg');
-  background-size: 350%;
-  background-position: center 20%;
-  color: #faf7f4;
-  position: relative;
+header {
+	width: 100%;
+	height: 216vw;
+	background-image: url('../pic1.jpg');
+	background-size: 350%;
+	background-position: center 20%;
+	color: #faf7f4;
+	position: relative;
 }
-#devise{
-  color: #FAF7F4;
-  font-family: cinzel;
-  font-size: 7.7vw;
-  padding-top: 8vw;
-  
+#devise {
+	color: #faf7f4;
+	font-family: cinzel;
+	font-size: 7.7vw;
+	padding-top: 8vw;
 }
-header h1{
-  font-size: 14vw;
-  font-weight: 400;
-  margin-bottom: 5px;
-  letter-spacing: 0;
+header h1 {
+	font-size: 14vw;
+	font-weight: 400;
+	margin-bottom: 5px;
+	letter-spacing: 0;
 }
-header h2{
-  margin-top: 0;
-  font-family: 'anastasia';
-  font-size: 11.5vw ;
+header h2 {
+	margin-top: 0;
+	font-family: anastasia;
+	font-size: 11.5vw;
 }
-.header-bottom-block{
-position: absolute;
-bottom: 0%;
-left: 50%;
-transform: translateX(-50%);
-}
-
-#intro p{
-  font-size: 4.6vw;
-  line-height: 10.2vw;
-}
-.firstIntroBlock{
-  background-color: rgba(143, 169, 140, 0.25);
-  border-radius: 150vw 150vw 0 0 
-}
-.love-elegance{
-  list-style: none;
-  padding: 0;
-  color: #1E3B22;
-  font-family: anastasia;
-
-}
-.firstPicBlock{
-  position: relative;
-  width: 100%;
-  height: 180vw;
-}
-#pic2, #pic3, #pic4, #pic5, #pic8, #pic9, #pic11, #pic12{
-  width: 60%;
-  border: 4vw solid white;
-  border-radius: 5px;
-  position: absolute;
-}
-#pic2, #pic4, #pic8, #pic11{
-  transform: rotate(-7deg);
-  left:5%;
-  top:5%;
-}
-#pic3, #pic5, #pic9, #pic12{
-  transform:rotate(7deg);
-  bottom:5%;
-  right:6%
-}
-.secondPicBlock{
-  position: relative;
-  width: 100%;
-  height: 105vw;
-  background-color: #8fa98c;
+.header-bottom-block {
+	position: absolute;
+	bottom: 0%;
+	left: 50%;
+	transform: translateX(-50%);
 }
 
-.colors-block{
-  display: flex;
-  width: 93%;
-  margin: 0 auto;
-  justify-content: space-between;
+#intro p {
+	font-size: 4.6vw;
+	line-height: 10.2vw;
 }
-.color{
-  width: 13vw;
-  height: 13vw;
-  border-radius: 50%;
+.firstIntroBlock {
+	background-color: rgba(143, 169, 140, 0.25);
+	border-radius: 150vw 150vw 0 0;
 }
-#color1{
-  background: #D3B694;
+.love-elegance {
+	list-style: none;
+	padding: 0;
+	color: #1e3b22;
+	font-family: anastasia, serif;
 }
-#color2{
-  background: #D6A19B;
+.firstPicBlock {
+	position: relative;
+	width: 100%;
+	height: 180vw;
 }
-#color3{
-  background: #7E242D;
+#pic2,
+#pic3,
+#pic4,
+#pic5,
+#pic8,
+#pic9,
+#pic11,
+#pic12 {
+	width: 60%;
+	border: 4vw solid white;
+	border-radius: 5px;
+	position: absolute;
 }
-#color4{
-  background: #5C331D;
+#pic2,
+#pic4,
+#pic8,
+#pic11 {
+	transform: rotate(-7deg);
+	left: 5%;
+	top: 5%;
 }
-#color5{
-  background: #56775A;
+#pic3,
+#pic5,
+#pic9,
+#pic12 {
+	transform: rotate(7deg);
+	bottom: 5%;
+	right: 6%;
 }
-#color6{
-  background: #8FA98C;
-}
-.rulesPicBlock{
-  position: relative;
-  width: 100%;
-  height: 110vw;
-  background-color: #8fa98c;
-}
-.rulesPicBlock img{
-  width: 42% !important;
-}
-.InvitationPicBlock{
-  position: relative;
-  width: 100%;
-  height: 110vw;
-  background-color: #8fa98c;
-
-}
-
-.olive{
-  width: 25vw;
-}
-#pic10, #pic13{
-  width: 100%;
-  height: auto;
-}
-.qr-cat{
-  width: 50%;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-#gn-logo{
-  width: 30%;
-  margin-top: 10px;
-  margin-bottom: 10px;
+.secondPicBlock {
+	position: relative;
+	width: 100%;
+	height: 105vw;
+	background-color: #8fa98c;
 }
 
+.colors-block {
+	display: flex;
+	width: 93%;
+	margin: 0 auto;
+	justify-content: space-between;
+}
+.color {
+	width: 13vw;
+	height: 13vw;
+	border-radius: 50%;
+}
+#color1 {
+	background: #d3b694;
+}
+#color2 {
+	background: #d6a19b;
+}
+#color3 {
+	background: #7e242d;
+}
+#color4 {
+	background: #5c331d;
+}
+#color5 {
+	background: #56775a;
+}
+#color6 {
+	background: #8fa98c;
+}
+.rulesPicBlock {
+	position: relative;
+	width: 100%;
+	height: 110vw;
+	background-color: #8fa98c;
+}
+.rulesPicBlock img {
+	width: 42% !important;
+}
+.InvitationPicBlock {
+	position: relative;
+	width: 100%;
+	height: 110vw;
+	background-color: #8fa98c;
+}
+
+.olive {
+	width: 25vw;
+}
+#pic10,
+#pic13 {
+	width: 100%;
+	height: auto;
+}
+.qr-cat {
+	width: 50%;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+#gn-logo {
+	width: 30%;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
 
 form {
-display: flex;
-flex-direction: column;
-gap: 20px;
-justify-content: center;
-width: 87%;
-margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	justify-content: center;
+	width: 87%;
+	margin: 0 auto;
 }
-form input, form button {
-  box-sizing: border-box;
-  width: 100%;
-  border: 2px solid #8fa98c;
-  color: #8fa98c;
-  text-align: center;
+form input,
+form button {
+	box-sizing: border-box;
+	width: 100%;
+	border: 2px solid #8fa98c;
+	color: #8fa98c;
+	text-align: center;
 }
 form button {
-  background-color: #8fa98c;
-  color: white;
+	background-color: #8fa98c;
+	color: white;
 }
