--- a/src/style.css
+++ b/src/style.css
@@ -31,17 +31,17 @@ header{
   position: relative;
 }
 #devise{
-  color: #FAF7F4;
+  color: rgba(250, 247, 244, 1);
   font-family: cinzel;
   font-size: 7.7vw;
   padding-top: 8vw;
-  
-}
+} 
 header h1{
   font-size: 14vw;
   font-weight: 400;
   margin-bottom: 5px;
   letter-spacing: 0;
+  line-height: 100%;
 }
 header h2{
   margin-top: 0;
@@ -68,6 +68,9 @@ transform: translateX(-50%);
   padding: 0;
   color: #1E3B22;
   font-family: anastasia;
+  font-size: 11.5vw;
+  line-height: 100%;
+  letter-spacing: 5%;
 
 }
 .firstPicBlock{
@@ -126,6 +129,11 @@ transform: translateX(-50%);
 }
 #color6{
   background: #8FA98C;
+}
+.rules h3{
+  font-family: anastasia;
+  font-size: 11.8vw;
+  font-weight: 400;
 }
 .rulesPicBlock{
   position: relative;
