--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@
 header{
   width: 100%;
   height:216vw;
-  background-image: url('../pic1.jpg');
+  background-image: url('../images/pic1.jpg');
   background-size: 350%;
   background-position: center 20%;
   color: #faf7f4;
@@ -43,7 +43,7 @@ header{
 header h1{
   font-size: 14vw;
   font-weight: 400;
-  margin-bottom: 5px;
+  margin-bottom: 2vwpx;
   letter-spacing: 0;
   line-height: 100%;
 }
